--- a/app/react/Viewer/scss/document.scss
+++ b/app/react/Viewer/scss/document.scss
@@ -165,15 +165,17 @@
 }
 
 .create-modal {
-  position: fixed;
+  position: absolute;
   right: 0;
-  top: 60px;
+  top: 0;
   bottom: 0;
   border-left: 1px dotted $c-grey;
   width: 400px;
   padding: 15px;
   transform: translateX(100%);
   transition: all 500ms;
+  overflow-y: scroll;
+	padding-bottom: 111px; /* footer height (magic number) */
   &.is-active {
     transform: translateX(0);
   }
