--- a/app/react/controllers/App/scss/elements/_base.scss
+++ b/app/react/controllers/App/scss/elements/_base.scss
@@ -3,11 +3,6 @@ body {
 	color: $c-black;
 	font-family: $f-regular;
 	font-size: $f-size;
-	position: relative;
-	padding-top: 60px;
-	display: flex;
-	min-height: 100vh;
-	flex-direction: column;
 }
 
 label {
